# mljet

./: .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  File1  LICENSE  README.md  codecov.yml  parser.py  pylintrc  pyproject.toml  renovate.json  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg
.github/workflows/: build.yml  checks.yml  codeql-analysis.yml  commitlint.yml  deployme.yml  functional.yml  release.yml  todotoissue.yml
deployme/: __init__.py
deployme/cli/: cli.py  helpers.py
deployme/cli/commands/: build.py  cook.py
deployme/cli/commands/info/: about.py  backends_list.py  frameworks_list.py  strategies_list.py  version.py
deployme/cli/commands/tools/: detect_serializer.py
deployme/contrib/: __init__.py  analyzer.py  entrypoint.py  local.py  project_builder.py  supported.py  validator.py
deployme/contrib/actions/: docker_build.py  project_build.py
deployme/contrib/docker_/: docker_builder.py  runner.py
deployme/cookie/: cutter.py  validator.py
deployme/cookie/templates/backends/: dispatcher.py
deployme/cookie/templates/backends/_aiohttp/: Dockerfile  requirements.txt  server.py
deployme/cookie/templates/backends/_fastapi/: Dockerfile  requirements.txt  server.py
deployme/cookie/templates/backends/_flask/: Dockerfile  requirements.txt  server.py
deployme/cookie/templates/ml/: _default.py  _sklearn.py  dispatcher.py  lama.py
deployme/docker/: docker_builder.py
deployme/docker_/: __init__.py  docker_builder.py
deployme/template/: Dockerfile  Dockerfile.lama  __init__.py  app.py  base_preprocessor.py  requirements.txt
deployme/utils/: __init__.py  conn.py  logging.py  logging_.py  names_generator.py  nb.py  requirements.py  requirements_collector.py  serializers.py  types.py  utils.py
deployme/utils/pipelines/: pipeline.py
docs/: Makefile
docs/source/: changelog.rst  conf.py  index.rst  installation.rst
docs/source/developers-guide/: contrib.rst  cookie.rst  index.rst  testing.rst
docs/source/reference/: deployme.contrib.docker_.rst  deployme.contrib.rst  deployme.cookie.rst  deployme.cookie.templates.backends.rst  deployme.cookie.templates.ml.rst  deployme.cookie.templates.rst  deployme.rst  deployme.utils.rst  index.rst  mljet.contrib.docker_.rst  mljet.contrib.rst  mljet.cookie.rst  mljet.cookie.templates.backends.rst  mljet.cookie.templates.ml.rst  mljet.cookie.templates.rst  mljet.rst  mljet.utils.rst  modules.rst
docs/source/tutorial/: index.rst
docs/source/tutorial/features/: 001_first.ipynb  001_first.py  001_first.py.md5  001_first.rst  001_first_codeobj.pickle  002_docker.ipynb  002_docker.py  002_docker.py.md5  002_docker.rst  002_docker_codeobj.pickle  index.rst  sg_execution_times.rst
examples/: catboost_example.py  lama_example.py  lightgbm_example.py  xgboost_example.py
examples/lama_axamples/: deploy_lama_clf.py
examples/lightautoml/: deploy_lama_clf.py
examples/skl/: skl_clf.py
examples/sklearn_examples/: client.py  deploy_sklearn_model.py  deploy_sklearn_pipeline.py  skl_clf.py
examples/swagger/: server.py
mljet/: __init__.py
mljet/cli/: cli.py  helpers.py
mljet/cli/commands/: build.py  cook.py
mljet/cli/commands/info/: about.py  backends_list.py  frameworks_list.py  strategies_list.py  version.py
mljet/cli/commands/tools/: detect_serializer.py
mljet/contrib/: __init__.py  analyzer.py  dockerutils.py  entrypoint.py  project_builder.py  supported.py  validator.py
mljet/contrib/actions/: docker_build.py  project_build.py
mljet/cookie/: cutter.py  validator.py
mljet/cookie/templates/ml/: _default.py  dispatcher.py  lama.py
mljet/utils/: __init__.py  funcs.py  names_generator.py  nb.py  requirements.py  serializers.py  utils.py
mljet/utils/pipelines/: dag.py  pipeline.py  stage.py
tests/: conftest.py  iomock.py  test_deploy_to_docker.py  test_reqscan.py  test_version.py
tests/cli/: test_appearance.py  test_autodiscovery.py  test_helpers.py
tests/cli/commands/: test_about.py  test_backends_list.py  test_build.py  test_cook.py  test_detect_serializer.py  test_frameworks_list.py  test_strategies_list.py  test_version.py  testing.py
tests/contrib/: test_analyzer.py
tests/contrib/project_builder/: test_copy_backend_dockerfile.py  test_dumps_models.py  test_full_build.py  test_init_project_directory.py
tests/contrib/validator/: test_validate_ret_backend.py  test_validate_ret_container_name.py  test_validate_ret_model.py  test_validate_ret_port.py  test_validate_ret_strategy.py
tests/cookie/: test_backends_dispatcher.py  test_ml_dispatcher.py
tests/cookie/cutter/: test_build_backend.py  test_insert_import.py  test_mypy_run.py  test_replace_method.py
tests/cookie/files/: exists_but_not_importable.ml
tests/cookie/modules/: m1.py
tests/cookie/validator/: test_check_associated_endpoints.py  test_check_entrypoint.py  test_check_needed_methods.py  test_get_assoc_endpoint_name.py  test_parse_defs.py  test_validate.py
tests/files/: f2.py  f3.ipynb  f5.ipynb  not_valid.txt
tests/functional/: test_catboost.py  test_functional.py  test_lama.py  test_lightgbm.py  test_sklearn.py  test_xgboost.py
tests/utils/: test_conn.py  test_logging.py  test_names_generator.py  test_nb.py  test_requirements.py  test_requirements_merger.py  test_utils.py
tests/utils/files/: f3.ipynb  f5.ipynb  not_valid.txt
tests/utils/notebooks-examples/: correct_notebook.ipynb  not_correct_version.ipynb  not_notebook.ipynb
tests/utils/pipelines/: graphs.py  test_dag.py  test_pipeline.py  test_stage.py
tests/utils/requirements-examples/: backend-requirements.txt  freezed-requirements.txt
tutorial/: README.rst
tutorial/features/: 002_docker.py  README.rst
website/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
website/components/Container/: index.tsx
website/components/Footer/: index.tsx
website/components/NavBar/: index.tsx  navbar.module.css
website/pages/: _app.tsx  index.tsx
(+13 files in other folders)
