[project]
name = "deployme"
dynamic = ["version"]
description = "minimalistic ML-models auto deployment tool"
authors = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"},
    {name = "Kristina Zheltova", email = "masterkristall@gmail.com"},
]
maintainers = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"},
    {name = "Kristina Zheltova", email = "masterkristall@gmail.com"},
]
urls = {Repository = "https://github.com/qnbhd/deployme"}
readme = "README.md"
keywords = ["ML", "deploy", "AutoDeploy"]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "click", "pandas", "numpy", "scikit-learn", "executor",
    "rich", "pipreqsnb", "merge-requirements", "docker"
]
classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ['flit_core>=3.2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.sdist]
include = ["deployme"]


[tool.black]
line-length = 70
target-version = ['py37']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
  | docs
)/
'''

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--color=yes"
markers = {slow = "Slow tests"}

[tool.pydocstyle]
inherit = false
ignore = 'D100,D104,D107,D202,D203,D212,D400,D401,D405,D406,D407,D415'
match = '.*\.py'
