[project]
name = "deployme"
dynamic = ["version"]
description = "minimalistic ML-models auto deployment tool"
authors = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"},
    {name = "Kristina Zheltova", email = "masterkristall@gmail.com"},
]
maintainers = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"},
    {name = "Kristina Zheltova", email = "masterkristall@gmail.com"},
]
urls = {Repository = "https://github.com/qnbhd/deployme"}
readme = "README.md"
keywords = ["ML", "deploy", "AutoDeploy"]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3", "pandas>=1.5.1",
    "numpy>=1.23.4", "scikit-learn>=1.1.0",
    "rich>=12.6.0", "merge-requirements>=0.5",
    "docker>=5.0.0", "importlib-metadata>=4.8.1"
]
classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ['flit_core>=3.2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.sdist]
include = ["deployme"]

[tool.black]
line-length = 80
target-version = ['py39']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
  | docs
)/
'''

[tool.isort]
profile = 'black'
force_grid_wrap = 2
combine_as_imports = true
line_length = 80
skip = ['docs', 'dist', 'venv', '.venv', 'build', 'deployme.egg-info', 'tutorial']

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--color=yes"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
