[project]
name = "mljet"
dynamic = ["version"]
description = "minimalistic ML-models auto mljetnt tool"
authors = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"},
    {name = "Kristina Zheltova", email = "masterkristall@gmail.com"},
]
maintainers = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"},
    {name = "Kristina Zheltova", email = "masterkristall@gmail.com"},
]
urls = {Repository = "https://github.com/qnbhd/mljet"}
readme = "README.md"
keywords = ["ML", "deploy", "AutoDeploy"]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click==8.1.3",
    "pandas==1.5.1",
    "numpy==1.23.4",
    "scikit-learn==1.1.3",
    "rich==12.6.0",
    "docker==6.0.1",
    "importlib_metadata==5.0.0",
    "black==22.10.0",
    "mypy==0.950",
    "returns==0.19.0",
    "isort==5.10.1",
    "emoji==2.2.0",
    "flask==2.2.2",
    "pydantic==1.10.15",
    "flask-pydantic==0.11.0",
    "sanic==22.9.1",
    "sanic-ext==22.9.1",
    "packaging==21.3",
    "nbformat==5.7.0",
    "dill==0.3.6",
    "joblib==1.2.0",
    "tabulate==0.9.0",
    "requests<2.29.0",
]
classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ['flit_core>=3.2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.sdist]
include = ["mljet"]
exclude = [
    '.*',
    'tests',
    'tutorial',
    'examples',
    'docs',
    'codecov.yml',
    'renovate.json',
]

[tool.semantic_release]
version_variable = "mljet/__init__.py:__version__"
branch = "main"
build_command = "pip install flit && flit build"
upload_to_pypi = true
upload_to_release = true

[project.scripts]
mljet = "mljet.cli.cli:cli"

[tool.black]
line-length = 80
target-version = ['py39']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
  | docs
)/
'''

[tool.isort]
profile = 'black'
force_grid_wrap = 2
combine_as_imports = true
line_length = 80
skip = ['docs', 'dist', 'venv', '.venv', 'build', 'mljet.egg-info', 'tutorial']

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--color=yes"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
